# tses-auth-service

./: .env.example  .env.sample  .gitignore  README.md  compose.yml  nginx.conf  pyproject.toml  setup.cfg
app/account/: service.py  tasks.py  utils.py
app/account/v1/: serializers.py  views.py
app/account/v1/urls/: auth.py
app/audit/: filters.py  models.py  tasks.py
app/audit/migrations/: 0001_initial.py
app/audit/v1/: serializers.py  urls.py  views.py
app/common/: decorators.py  exceptions.py  filter.py  pagination.py  throttle.py  views.py
app/core/: asgi.py  celery.py  cookie_token.py  middleware.py  settings_test.py  storage_backends.py  urls.py
app/core/settings/: __init__.py  base.py  celery.py  database.py  logging.py  rest.py  storage.py
docker/celery/: Dockerfile-celery  entrypoint-celery.sh
docker/test/: Dockerfile-test
docker/web/: Dockerfile  entrypoint.sh
docker/workers/: Dockerfile-celery  entrypoint-celery.sh
